# Parametric_polymorphism

./: README.md
polymorphism-dirgnic/: README.md  try2.cabal
polymorphism-dirgnic/app/: Main.hs
polymorphism-dirgnic/src/: Codegen.hs  IRInterpreter.hs  IntermediateRepresentation.hs  Lowering.hs  Monomorphize.hs  Parsing.hs  Syntax.hs
polymorphism-dirgnic/test/: test1.golden  test1.out  test1.txt  test2.golden  test2.out  test2.txt  test3.golden  test3.out  test3.txt
