cabal-version:       >=1.10
name:                try2
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Syntax,
                       Codegen,
                       Monomorphize,
                       Parsing,
                       IRInterpreter,
                       IntermediateRepresentation,
                       Lowering
  build-depends:       base >= 4.7 && < 5,
                       llvm-hs-pure ==15.0.*,
                       llvm-hs ==15.0.*,
                       transformers ==0.6.*,
                       megaparsec >= 9.0,
                       parser-combinators ==1.3.*,
                       containers==0.6.7,
                       mtl >= 2.2 && < 2.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable try2
  main-is:             Main.hs
  build-depends:       try2,
                       base ==4.18.*,
                       llvm-hs-pure ==15.0.*,
                       mtl >= 2.2 && < 2.4,
                       llvm-hs ==15.0.*,
                       megaparsec >= 9.0,containers==0.6.7
  hs-source-dirs:      app, src
  default-language:    Haskell2010
  ghc-options:         -Wall
